DetailsPanel fonts, invisible submit button for login form, small ui fixes

--- a/src/main/resources/org/techhouse/shirts/display/web/styles/layout.less
+++ b/src/main/resources/org/techhouse/shirts/display/web/styles/layout.less
@@ -9,6 +9,7 @@ body {
 	left: 0;
 	right: 0;
 	bottom: 0;
+	color: @colors_text_dark;
 }
 
 .table {
