--- a/src/main/resources/org/techhouse/shirts/display/web/styles/utilities.less
+++ b/src/main/resources/org/techhouse/shirts/display/web/styles/utilities.less
@@ -24,6 +24,10 @@
 		border-top-style: none;
 		border-left-style: none;
 	}
+	.only (bottom, left) {
+		border-top-style: none;
+		border-right-style: none;
+	}
 	
 	.radius (@radius) {
 		border-radius: @radius;
